DB-6825 hdp2.6.3 installation doc using custom ambari service (#1664)
DB-6825 hdp2.6.3 installation doc using custom ambari service